force-app/main/default/objects/OPP_TSIByLocation__c/OPP_TSIByLocation__c.object-meta.xml
<CustomObject>
    <label>TSI by Location</label>
    <nameField>
        <displayFormat>TSI-{00000000}</displayFormat>
        <label>Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TSI by Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>