force-app/main/default/objects/OPP_TSIByLocation__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>