force-app/main/default/objects/OPP_TSIByLocation__c/fields/CoveredSection__c.field-meta.xml
<CustomField>
    <fullName>CoveredSection__c</fullName>
    <label>Covered Section</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>