force-app/main/default/objects/OPP_TSIByLocation__c/fields/CRSAdditionalStreetInfo__c.field-meta.xml
<CustomField>
    <fullName>CRSAdditionalStreetInfo__c</fullName>
    <label>Additional Street Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>