force-app/main/default/objects/OPP_TSIByLocation__c/fields/CRSAddress__c.field-meta.xml
<CustomField>
    <fullName>CRSAddress__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>