force-app/main/default/objects/OPP_TSIByLocation__c/fields/CRSGrossPremium__c.field-meta.xml
<CustomField>
    <fullName>CRSGrossPremium__c</fullName>
    <label>Gross Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>