force-app/main/default/objects/OPP_TSIByLocation__c/fields/CRSLocationName__c.field-meta.xml
<CustomField>
    <fullName>CRSLocationName__c</fullName>
    <label>Location Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>