force-app/main/default/objects/OPP_TSIByLocation__c/fields/CRSRetailTSIInfo_is__c.field-meta.xml
<CustomField>
    <fullName>CRSRetailTSIInfo_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RetailTSIInfo</label>
    <type>Checkbox</type>
</CustomField>