force-app/main/default/objects/OPP_TSIByLocation__c/fields/CRSSection__c.field-meta.xml
<CustomField>
    <fullName>CRSSection__c</fullName>
    <label>Section</label>
    <length>100</length>
    <type>Text</type>
</CustomField>