force-app/main/default/objects/OPP_TSIByLocation__c/fields/DPPct__c.field-meta.xml
<CustomField>
    <fullName>DPPct__c</fullName>
    <label>DP (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>