force-app/main/default/objects/OPP_TSIByLocation__c/fields/FxRatePremCurrency__c.field-meta.xml
<CustomField>
    <fullName>FxRatePremCurrency__c</fullName>
    <label>FX Rate to Prem Currency</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>