force-app/main/default/objects/OPP_TSIByLocation__c/fields/GrossPrem_fm__c.field-meta.xml
<CustomField>
    <fullName>GrossPrem_fm__c</fullName>
    <formula>GrossPremBfDP_fm__c * (DPPct__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Prem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>