force-app/main/default/objects/OPP_TSIByLocation__c/fields/GrossPremBfDP_fm__c.field-meta.xml
<CustomField>
    <fullName>GrossPremBfDP_fm__c</fullName>
    <formula>InsuredAmount__c * (GrossRatePct__c / 100) * FxRatePremCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Prem (Before DP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>