force-app/main/default/objects/OPP_TSIByLocation__c/fields/GrossPremDP1__c.field-meta.xml
<CustomField>
    <fullName>GrossPremDP1__c</fullName>
    <label>(X)Gross Prem (Berfore DP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>