force-app/main/default/objects/OPP_TSIByLocation__c/fields/GrossRatePct__c.field-meta.xml
<CustomField>
    <fullName>GrossRatePct__c</fullName>
    <label>Gross Rate (%)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>