force-app/main/default/objects/OPP_TSIByLocation__c/fields/InsuredAmount__c.field-meta.xml
<CustomField>
    <fullName>InsuredAmount__c</fullName>
    <label>Insured Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>