force-app/main/default/objects/OPP_TSIByLocation__c/fields/NetPrem_fm__c.field-meta.xml
<CustomField>
    <fullName>NetPrem_fm__c</fullName>
    <formula>GrossPremDP1__c *  NetRate_fm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Prem (Before DP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>