force-app/main/default/objects/OPP_TSIByLocation__c/fields/NetPremDP_fm__c.field-meta.xml
<CustomField>
    <fullName>NetPremDP_fm__c</fullName>
    <formula>CRSGrossPremium__c * NetRate_fm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Prem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>