force-app/main/default/objects/OPP_TSIByLocation__c/fields/NetRate_fm__c.field-meta.xml
<CustomField>
    <fullName>NetRate_fm__c</fullName>
    <formula>GrossRatePct__c * (1- SlipInfo_md__r.Opportunity_lk__r.RICommPct__c - SlipInfo_md__r.Opportunity_lk__r.OtherDeductionsPct__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Rate(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>