force-app/main/default/objects/OPP_TSIByLocation__c/fields/NetToLKPrem_fm__c.field-meta.xml
<CustomField>
    <fullName>NetToLKPrem_fm__c</fullName>
    <formula>CRSGrossPremium__c *  NetRate_fm__c *  SlipInfo_md__r.Opportunity_lk__r.TotalOrderPct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net to LK Prem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>