force-app/main/default/objects/OPP_TSIByLocation__c/fields/PlacementId_fm__c.field-meta.xml
<CustomField>
    <fullName>PlacementId_fm__c</fullName>
    <formula>CASESAFEID(SlipInfo_md__r.Placement_lk__c)</formula>
    <label>Placement Id</label>
    <type>Text</type>
</CustomField>