force-app/main/default/objects/OPP_TSIByLocation__c/fields/SlipInfo_md__c.field-meta.xml
<CustomField>
    <fullName>SlipInfo_md__c</fullName>
    <label>Slip Information</label>
    <referenceTo>OPP_SlipInfo__c</referenceTo>
    <relationshipLabel>TSI by Locations</relationshipLabel>
    <relationshipName>TSIByLocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>