force-app/main/default/objects/OPP_TSIByLocation__c/fields/SlipTSI__c.field-meta.xml
<CustomField>
    <fullName>SlipTSI__c</fullName>
    <label>TSI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>