force-app/main/default/objects/OPP_TSIByLocation__c/fields/TSICurrency__c.field-meta.xml
<CustomField>
    <fullName>TSICurrency__c</fullName>
    <label>TSI Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>