force-app/main/default/objects/OPP_TSIByLocation__c/fields/UnamedLocation__c.field-meta.xml
<CustomField>
    <fullName>UnamedLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unnamed Location</label>
    <type>Checkbox</type>
</CustomField>